--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "test:e2e": "dotenv -e .env.test -- jest --watch --no-cache --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/cache-manager": "^2.2.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
@@ -36,6 +37,7 @@
     "@nestjs/schedule": "^4.0.1",
     "@prisma/client": "^5.9.0",
     "argon2": "^0.31.2",
+    "cache-manager": "^5.4.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "passport": "^0.7.0",
